objects/redwing__Training_Track_Level_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active Learning Plans can be added to a Trac</errorMessage>
            <filterItems>
                <field>redwing__Training_Plan__c.redwing__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>NOTE: Only active Learning Plans can be added to a Trac</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Trac Level Items</relationshipLabel>
        <relationshipName>Training_Track_Level_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track_Level__c</fullName>
        <label>Learning Trac Level</label>
        <referenceTo>redwing__Training_Track_Level__c</referenceTo>
        <relationshipLabel>Learning Trac Level Items</relationshipLabel>
        <relationshipName>Training_Track_Level_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Trac Level Item</label>
    <nameField>
        <displayFormat>LTLI-{0000000}</displayFormat>
        <label>Learning Trac Level Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Trac Level Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>